--- a/src/LocInRegion/LocInRegion.csproj
+++ b/src/LocInRegion/LocInRegion.csproj
@@ -14,7 +14,7 @@
 
 	<ItemGroup>
 		<None Update="Data\*.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
 
